    * Bug where filling in colour 15 (white) on edge of a tile filled in all
      colour 15 pixels on the edge. [Ralph Versteegen]
    * Really fixed the "script arguments overflow into local variables" bug.
      You need to recompile your scripts to get this fix [Ralph Versteegen]
    * Fixed bug 163, a random crash in the music import screen. [Simon, Mike]
    * Bug 179: keyispressed did not always return true, being very noticable
      when two conditions used in an if statement [Ralph Versteegen]
    * Joystick didn't work at all in the Windows version [Mike]
    * "NPC X","NPC Y" and "NPC at spot" behaviour has been corrected: an
      NPC's position is now the tile its top left corner stands on [Ralph]
      
  * New Plotscripting Commands
    * "hero frame", "NPC frame" [Ralph Versteegen]
    * "get hero stat cap", "set capped hero stat"
    * "load menu"
    * "set [days/hours/minutes/seconds] of play", "get seconds of play" [Mike
      Caron]
    * "npc extra", "set npc extra" [Mike Caron]

  * Stuff only Developers Will Notice
    * Some rewritten map wrapping code [Ralph Versteegen]
    * Reformatted NPC data with UDTs

Mar 15 2006 [tirgoviste]
  * New Features
    * Stat caps [Mike Caron]
    * "% based attacks damage instead of set" attack bitset [Mike Caron]
    * Precise weapon placement. (use . and , to choose which
      frame to edit) [Mike Caron]
    * NPC Placement Editor now shows the copy number of NPCs (the bottom
      number) [Mike Caron]

  * Bug Fixes
    * Pausing the music will probably cause "stuck notes" (i.e. notes that never
      get turned off) if any notes are playing at the time [Mike Caron]
    * Browsing for a replacement song, and cancelling deleted the existing song.
      [Mike Caron]
    * Rewards in battle are rewarded multiple times. [Mike Caron]
    * Linux: specifying a file on the command line now works even if the file
      is in a different directory. [James Paige]