@@ -39,7 +39,7 @@ define function, begin
 27,suspendoverlay,0         # turns off overhead tiles
 28,playsong,1,0             # play song(#)
 29,stopsong,0               # stop the music
-30,keyispressed,1,0         # check key by scancode
+30,keyval,1,0               # check key by scancode - returns value from keyval array
 31,rankincaterpillar,1,0    # finds the heros position in the caterpillar
 32,showbackdrop,1,0         # showbackdrop (#)
 33,showmap,0                # cancels a showbackdrop
@@ -236,6 +236,7 @@ define function, begin
 232,trace,1,0                 #writes the provided string to G_DEBUG.txt
 233,getsongname,2,0,0         #get song name and store in string
 234,loadmenu,1,-1             #show loadmenu (really load/quit?)
+235,keyispressed,1,0          #check key by scancode, returns a bool
 end
 
 #--------------------------------------------------------------------------
